fix(github): text readablity at actions startup

--- a/styles/github/catppuccin.user.css
+++ b/styles/github/catppuccin.user.css
@@ -195,6 +195,7 @@
 
     &,
     & body {
+	  accent-color: @accent-color;
       --color-canvas-default-transparent: rgba(13, 17, 23, 0);
       --color-page-header-bg: @base;
       --color-marketing-icon-primary: @sky;
@@ -296,9 +297,9 @@
       --color-checks-header-label-open-text: @accent-color;
       --color-checks-header-border: @surface0;
       --color-checks-header-icon: @text;
-      --color-checks-line-text: @subtext1;
-      --color-checks-line-num-text: @subtext1;
-      --color-checks-line-timestamp-text: @subtext1;
+      --color-checks-line-text: @base;
+      --color-checks-line-num-text: @base;
+      --color-checks-line-timestamp-text: @base;
       --color-checks-line-hover-bg: @surface0;
       --color-checks-line-selected-bg: #dc2286;
       --color-checks-line-selected-num-text: #dc2286;
